Closed Bug 431754 Opened 18 years ago Closed 18 years ago

try harder to commit in the face of safebrowsing server errors

Categories

(Toolkit :: Safe Browsing, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3

People

(Reporter: dcamp, Assigned: dcamp)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch v1Splinter Review
Right now it's common to hit a 400 error when processing safebrowsing redirects. Currently we throw away the whole update when that happens, but in most cases we can apply what we've already received, which should be a big help on large updates. Attached patch commits on a fetch failure, as long as we haven't started to process the data on the connection (in which case committing would leave us in an inconsistent state).
Flags: blocking-firefox3?
Attachment #318890 - Flags: review?(tony)
This patch also happens to fix 425570.
Blocks: 425570
Comment on attachment 318890 [details] [diff] [review] v1 looks good.
Attachment #318890 - Flags: review?(tony) → review+
Attachment #318890 - Flags: approval1.9?
Comment on attachment 318890 [details] [diff] [review] v1 a1.9+=damons
Attachment #318890 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Assignee: nobody → dcamp
Version: unspecified → Trunk
Checking in toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.cpp; /cvsroot/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.cpp,v <-- nsUrlClassifierStreamUpdater.cpp new revision: 1.22; previous revision: 1.21 done Checking in toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.h; /cvsroot/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.h,v <-- nsUrlClassifierStreamUpdater.h new revision: 1.15; previous revision: 1.14 done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 3
Flags: blocking-firefox3? → blocking-firefox3+
Attached patch fix Solaris bustage (obsolete) — Splinter Review
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox-Ports/1209899040.1209899142.610.gz Sun CC is unhappy: "../../../../../mozilla/toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.cpp", line 311: Error: Ambiguous "?:" expression, second operand of type "int" and third operand of type "nsCOMPtr<nsIUrlClassifierCallback>" can be converted to one another. "../../../../../mozilla/toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.cpp", line 329: Error: Ambiguous "?:" expression, second operand of type "int" and third operand of type "nsCOMPtr<nsIUrlClassifierCallback>" can be converted to one another. 2 Error(s) detected. gmake[5]: *** [nsUrlClassifierStreamUpdater.o] Error 2
Attachment #319263 - Flags: review?(dcamp)
Comment on attachment 319263 [details] [diff] [review] fix Solaris bustage There's already a patch for this in bug 432066.
Attachment #319263 - Attachment is obsolete: true
Attachment #319263 - Flags: review?(dcamp)
Depends on: 432066
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: