Bug 431754 - "try harder to commit in the face of safebrowsing server errors" [p=dcamp@mozilla.com (Dave Camp) r=tony a1.9=damons]