toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.cpp
@@ -65,8 +65,8 @@ static const PRLogModuleInfo *gUrlClassifierStreamUpdaterLog = nsnull;
 // Handles creating/running the stream listener
 
 nsUrlClassifierStreamUpdater::nsUrlClassifierStreamUpdater()
-  : mIsUpdating(PR_FALSE), mInitialized(PR_FALSE), mUpdateUrl(nsnull),
-    mChannel(nsnull)
+  : mIsUpdating(PR_FALSE), mInitialized(PR_FALSE), mDownloadError(PR_FALSE),
+    mBeganStream(PR_FALSE), mUpdateUrl(nsnull), mChannel(nsnull)
 {
 #if defined(PR_LOGGING)
   if (!gUrlClassifierStreamUpdaterLog)
@@ -95,6 +95,7 @@ nsUrlClassifierStreamUpdater::DownloadDone()
   mIsUpdating = PR_FALSE;
 
   mPendingUpdates.Clear();
+  mDownloadError = PR_FALSE;
   mSuccessCallback = nsnull;
   mUpdateErrorCallback = nsnull;
   mDownloadErrorCallback = nsnull;
@@ -134,6 +135,8 @@ nsUrlClassifierStreamUpdater::FetchUpdate(nsIURI *aUpdateUrl,
   nsresult rv;
   rv = NS_NewChannel(getter_AddRefs(mChannel), aUpdateUrl, nsnull, nsnull, this);
   NS_ENSURE_SUCCESS(rv, rv);
+
+  mBeganStream = PR_FALSE;
 
   if (!aRequestBody.IsEmpty()) {
     rv = AddRequestBody(aRequestBody);
@@ -280,7 +283,11 @@ nsUrlClassifierStreamUpdater::StreamFinished(nsresult status)
                      update.mTable, update.mServerMAC);
     if (NS_FAILED(rv)) {
       LOG(("Error fetching update url: %s\n", update.mUrl.get()));
-      mDBService->CancelUpdate();
+      // We can commit the urls that we've applied so far.  This is
+      // probably a transient server problem, so trigger backoff.
+      mDownloadErrorCallback->HandleEvent(EmptyCString());
+      mDownloadError = PR_TRUE;
+      mDBService->FinishUpdate();
       return rv;
     }
 
@@ -296,11 +303,12 @@ NS_IMETHODIMP
 nsUrlClassifierStreamUpdater::UpdateSuccess(PRUint32 requestedTimeout)
 {
   LOG(("nsUrlClassifierStreamUpdater::UpdateSuccess [this=%p]", this));
-  NS_ASSERTION(mPendingUpdates.Length() == 0,
-               "Didn't fetch all update URLs.");
+  if (mPendingUpdates.Length() != 0) {
+    NS_WARNING("Didn't fetch all safebrowsing update redirects");
+  }
 
   // DownloadDone() clears mSuccessCallback, so we save it off here.
-  nsCOMPtr<nsIUrlClassifierCallback> successCallback = mSuccessCallback;
+  nsCOMPtr<nsIUrlClassifierCallback> successCallback = mDownloadError ? nsnull : mSuccessCallback;
   DownloadDone();
 
   nsCAutoString strTimeout;
@@ -318,7 +326,8 @@ nsUrlClassifierStreamUpdater::UpdateError(PRUint32 result)
   LOG(("nsUrlClassifierStreamUpdater::UpdateError [this=%p]", this));
 
   // DownloadDone() clears mUpdateErrorCallback, so we save it off here.
-  nsCOMPtr<nsIUrlClassifierCallback> errorCallback = mUpdateErrorCallback;
+  nsCOMPtr<nsIUrlClassifierCallback> errorCallback = mDownloadError ? nsnull : mUpdateErrorCallback;
+
   DownloadDone();
 
   nsCAutoString strResult;
@@ -368,29 +377,54 @@ nsUrlClassifierStreamUpdater::OnStartRequest(nsIRequest *request,
                                              nsISupports* context)
 {
   nsresult rv;
+  PRBool downloadError = PR_FALSE;
+  nsCAutoString strStatus;
+  nsresult status = NS_OK;
 
-  rv = mDBService->BeginStream(mStreamTable, mServerMAC);
-  NS_ENSURE_SUCCESS(rv, rv);
-  mStreamTable.Truncate();
-  mServerMAC.Truncate();
-
+  // Only update if we got http success header
   nsCOMPtr<nsIHttpChannel> httpChannel = do_QueryInterface(request);
   if (httpChannel) {
-    nsresult status;
     rv = httpChannel->GetStatus(&status);
     NS_ENSURE_SUCCESS(rv, rv);
 
-    LOG(("OnStartRequest (status %x)", status));
-
     if (NS_ERROR_CONNECTION_REFUSED == status ||
         NS_ERROR_NET_TIMEOUT == status) {
-      // Assume that we're overloading the server and trigger backoff.
-      mDownloadErrorCallback->HandleEvent(nsCString());
-      return NS_ERROR_ABORT;
+      // Assume we're overloading the server and trigger backoff.
+      downloadError = PR_TRUE;
+    }
+
+    if (NS_SUCCEEDED(status)) {
+      PRBool succeeded = PR_FALSE;
+      rv = httpChannel->GetRequestSucceeded(&succeeded);
+      NS_ENSURE_SUCCESS(rv, rv);
+
+      if (!succeeded) {
+        // 404 or other error, pass error status back
+        LOG(("HTTP request returned failure code."));
+
+        rv = httpChannel->GetResponseStatus(&status);
+        NS_ENSURE_SUCCESS(rv, rv);
+
+        strStatus.AppendInt(status);
+        downloadError = PR_TRUE;
+      }
     }
   }
 
-  return NS_OK;
+  if (downloadError) {
+    mDownloadErrorCallback->HandleEvent(strStatus);
+    mDownloadError = PR_TRUE;
+    status = NS_ERROR_ABORT;
+  } else if (NS_SUCCEEDED(status)) {
+    mBeganStream = PR_TRUE;
+    rv = mDBService->BeginStream(mStreamTable, mServerMAC);
+    NS_ENSURE_SUCCESS(rv, rv);
+  }
+
+  mStreamTable.Truncate();
+  mServerMAC.Truncate();
+
+  return status;
 }
 
 NS_IMETHODIMP
@@ -406,28 +440,6 @@ nsUrlClassifierStreamUpdater::OnDataAvailable(nsIRequest *request,
   LOG(("OnDataAvailable (%d bytes)", aLength));
 
   nsresult rv;
-
-  // Only update if we got http success header
-  nsCOMPtr<nsIHttpChannel> httpChannel = do_QueryInterface(request);
-  if (httpChannel) {
-    PRBool succeeded = PR_FALSE;
-    rv = httpChannel->GetRequestSucceeded(&succeeded);
-    NS_ENSURE_SUCCESS(rv, rv);
-
-    if (!succeeded) {
-      // 404 or other error, pass error status back
-      LOG(("HTTP request returned failure code."));
-
-      PRUint32 status;
-      rv = httpChannel->GetResponseStatus(&status);
-      NS_ENSURE_SUCCESS(rv, rv);
-
-      nsCAutoString strStatus;
-      strStatus.AppendInt(status);
-      mDownloadErrorCallback->HandleEvent(strStatus);
-      return NS_ERROR_ABORT;
-    }
-  }
 
   // Copy the data into a nsCString
   nsCString chunk;
@@ -453,12 +465,19 @@ nsUrlClassifierStreamUpdater::OnStopRequest(nsIRequest *request, nsISupports* co
 
   nsresult rv;
 
-  // If we got the whole stream, call FinishStream to process the changes.
-  // Otherwise, call CancelStream to rollback the changes.
-  if (NS_SUCCEEDED(aStatus))
+  if (NS_SUCCEEDED(aStatus)) {
+    // Success, finish this stream and move on to the next.
     rv = mDBService->FinishStream();
-  else
+  } else if (mBeganStream) {
+    // We began this stream and couldn't finish it.  We have to cancel the
+    // update, it's not in a consistent state.
     rv = mDBService->CancelUpdate();
+  } else {
+    // The fetch failed, but we didn't start the stream (probably a
+    // server or connection error).  We can commit what we've applied
+    // so far, and request again later.
+    rv = mDBService->FinishUpdate();
+  }
 
   mChannel = nsnull;
 
